--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,13 @@
             <version>1.1.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
         <!-- dubbo -->
         <!--<dependency>-->
         <!--<groupId>com.alibaba</groupId>-->
